2003-11-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/parse_filename.cpp: avoid repetitive vector::erase(v.begin())
	* libregex/stl.pat.in:
	* libregex/tests/mangled-name.in: add (i|o)stream operator(>>|<<)

2003-11-02  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/liblegacy/opd_image.h:
	* daemon/liblegacy/opd_image.c:
	* daemon/liblegacy/opd_proc.c:
	* daemon/liblegacy/opd_sample_files.c: sparse sample file array
	  allocated by line.

2003-11-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/glob_filter.h:
	* libutil++/path_filter.h:
	* libutil++/string_filter.h: comment fix to match implementation
	* libutil++/tests/path_filter_tests.cpp: new file test
	* libutil++/tests/Makefile.am: upate build
	* libutil++/tests/string_filter_tests.cpp: test white space at start
	  of pattern

2003-11-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: format_double can only format percent
	* libutil++/string_manip.h:
	* libpp/format_output.cpp:
	* libutil++/tests/string_manip_tests.cpp:
	* pp/opannotate.cpp:
	* pp/opreport.cpp: s/format_double/format_percent/

2003-11-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/glob_filter.h:
	* libutil++/string_filter.h:
	* libutil++/tests/string_filter_tests.cpp: minor tidy

	* libutil++/tests/glob_filter_tests.cpp: new file
	* libutil++/tests/Makefile.am: update build

2003-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: typo
	* libutil++/generic_spec.cpp: removed file
	* libutil++/Makefile.am: update according
	* libutil++/generic_spec.h: ensure generic_spec<string> will not link
	* libutil++/path_filter.cpp: minor tidy

2003-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests/string_manip_tests.cpp: ehance output on failure
	* module/oprofile.h:
	* module/oprofile.c: two new read-only sysctl: nr_buffer_overflow and
	  nr_note_buffer_overflow

2003-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests/Makefile.am: