@@ -7,3 +7,4 @@ glob_filter_tests
 path_filter_tests
 comma_list_tests
 file_manip_tests
+utility_tests
